src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwU-dhF500-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ndefault window height: F500\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 0 × 500, bounds: 1239 × 688, states: []
size: 1 × 500, bounds: 1239 × 688, states: [Activated]
